Se agrego informacion de lo que esta haciando
me refiero a Jhon Tajumbina

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
     <p> Soy Jhon Tajumbina tengo 20 años  </p>
+    <p> estoy estudiando en platzi aprendiendo de git </p>
+
     
 </body>
 </html>
