se agrego normalize y se modifico html, css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/estilos.css">
-    <title>This is my history</title>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <title>Blogpost</title>
 </head>
 <body>
 
-    <p> Soy Jhon Tajumbina tengo 20 años  </p>
-    <p> estoy estudiando en platzi aprendiendo de git </p>
+    <div class="container">
+
+        <div id="post">
+
+            <h1>Este es un Blogpost</h1>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate adipisci aperiam, possimus totam recusandae quibusdam deleniti maxime quaerat voluptatum, iste unde enim neque reprehenderit nisi velit eos at eius commodi!,Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, nam corporis, cupiditate numquam dolore maiores dignissimos hic impedit odio explicabo libero quibusdam repellat quae nisi consectetur eaque omnis cum a!</p>
+
+        </div>
+    </div>
+    
 
     
 </body>
