--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
             <h1>Este es un Blogpost</h1>
 
+            <div id=" cabecera ">
+                 <h2>cebecera</h2>
+            </div>
+
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate adipisci aperiam, possimus totam recusandae quibusdam deleniti maxime quaerat voluptatum, iste unde enim neque reprehenderit nisi velit eos at eius commodi!,Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, nam corporis, cupiditate numquam dolore maiores dignissimos hic impedit odio explicabo libero quibusdam repellat quae nisi consectetur eaque omnis cum a!</p>
 
         </div>
