--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
        
         <div id="cabecera">
-            <h2>HyperBlog</h2>
+            <h2 class="title">HyperBlog</h2>
 
             <span id="tagline">tu blog de confianza</span>
 
