--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="/css/normalize.css">
-    <title>Blogpost</title>
+    <title>HyperBlog 2.0</title>
 </head>
 <body>
 
