se puso una imagen

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis blanditiis obcaecati porro veritatis. Ab voluptatem voluptate consequuntur repellat! Nihil maxime, beatae labore atque sapiente ad eos reprehenderit cupiditate quos nostrum?</p>
-
+            
+            <div>
+                <img src="/imagenes/Jhontabo.jpg" alt="Jhontabo">
+            </div>
         </div>
 
         <div id="footer">
